# Data-engineering

./: README.md  data_loader.py  pyproject.toml  requirements.txt  write_to_db.py
api_example/: README.md  api_reader.py
etl/: extract.py  load.py  main.py  transform.py
experiments/: data_loader.py  write_to_db.py
experiments/api_example/: api_reader.py
notebooks/: EDA analysis.ipynb  EDA.ipynb  EDA.py  Seaborn_EDA.ipynb
