[project]
name = "my-data-project"
version = "0.1.0"
description = ""
authors = [
    {name = "Daria"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohappyeyeballs>=2.6.1,<3.0.0",
    "aiohttp>=3.13.1,<4.0.0",
    "aiosignal>=1.4.0,<2.0.0",
    "alabaster>=0.7.16,<1.0.0",
    "altair>=5.5.0,<6.0.0",
    "anyio>=4.11.0,<5.0.0",
    "argon2-cffi>=25.1.0,<26.0.0",
    "argon2-cffi-bindings>=25.1.0,<26.0.0",
    "arrow>=1.2.3,<2.0.0",
    "astroid>=3.3.11,<4.0.0",
    "asttokens>=2.0.5,<3.0.0",
    "async-lru>=2.0.5,<3.0.0",
    "asyncssh>=2.21.1,<3.0.0",
    "atomicwrites>=1.4.0,<2.0.0",
    "attrs>=25.4.0,<26.0.0",
    "autopep8>=2.0.4,<3.0.0",
    "Babel>=2.11.0,<3.0.0",
    "bcrypt>=5.0.0,<6.0.0",
    "beautifulsoup4>=4.12.3,<5.0.0",
    "binaryornot>=0.4.4,<1.0.0",
    "biopython>=1.85,<2.0.0",
    "black>=24.4.2,<25.0.0",
    "bleach>=4.1.0,<5.0.0",
    "blinker>=1.9.0,<2.0.0",
    "Brotli>=1.0.9,<2.0.0",
    "cachetools>=6.2.1,<7.0.0",
    "cattrs>=25.3.0,<26.0.0",
    "certifi>=2025.10.5,<2026.0.0",
    "cffi>=1.16.0,<2.0.0",
    "chardet>=4.0.0,<5.0.0",
    "charset-normalizer>=3.3.2,<4.0.0",
    "click>=8.1.7,<9.0.0",
    "cloudpickle>=3.0.0,<4.0.0",
    "colorama>=0.4.6,<1.0.0",
    "comm>=0.2.1,<1.0.0",
    "contourpy>=1.3.1,<2.0.0",
    "cookiecutter>=2.6.0,<3.0.0",
    "cryptography>=43.0.0,<44.0.0",
    "cycler>=0.11.0,<1.0.0",
    "debugpy>=1.6.7,<2.0.0",
    "decorator>=5.1.1,<6.0.0",
    "defusedxml>=0.7.1,<1.0.0",
    "diff-match-patch>=20200713,<20210000.0.0",
    "dill>=0.3.8,<1.0.0",
    "docstring-to-markdown>=0.11,<1.0.0",
    "docutils>=0.18.1,<1.0.0",
    "dotenv>=0.9.9,<1.0.0",
    "etl>=0.0.1,<1.0.0",
    "executing>=0.8.3,<1.0.0",
    "fastjsonschema>=2.16.2,<3.0.0",
    "flake8>=7.1.2,<8.0.0",
    "fonttools>=4.60.1,<5.0.0",
    "fqdn>=1.5.1,<2.0.0",
    "frozenlist>=1.8.0,<2.0.0",
    "gitdb>=4.0.12,<5.0.0",
    "GitPython>=3.1.45,<4.0.0",
    "greenlet>=3.2.4,<4.0.0",
    "h11>=0.16.0,<1.0.0",
    "httpcore>=1.0.9,<2.0.0",
    "httpx>=0.28.1,<1.0.0",
    "idna>=3.7,<4.0.0",
    "imagesize>=1.4.1,<2.0.0",
    "importlib-metadata>=7.0.1,<8.0.0",
    "inflection>=0.5.1,<1.0.0",
    "intervaltree>=3.1.0,<4.0.0",
    "ipykernel>=6.30.1,<7.0.0",
    "ipython>=8.25.0,<9.0.0",
    "ipython_pygments_lexers>=1.1.1,<2.0.0",
    "isoduration>=20.11.0,<21.0.0",
    "isort>=5.13.2,<6.0.0",
    "jaraco.classes>=3.2.1,<4.0.0",
    "jedi>=0.19.1,<1.0.0",
    "jeepney>=0.7.1,<1.0.0",
    "jellyfish>=1.1.0,<2.0.0",
    "Jinja2>=3.1.4,<4.0.0",
    "json5>=0.12.1,<1.0.0",
    "jsonpointer>=3.0.0,<4.0.0",
    "jsonschema>=4.19.2,<5.0.0",
    "jsonschema-specifications>=2023.7.1,<2024.0.0",
    "jupyter_client>=8.6.0,<9.0.0",
    "jupyter_core>=5.7.2,<6.0.0",
    "jupyter-events>=0.12.0,<1.0.0",
    "jupyter-lsp>=2.3.0,<3.0.0",
    "jupyter_server>=2.17.0,<3.0.0",
    "jupyter_server_terminals>=0.5.3,<1.0.0",
    "jupyterlab>=4.4.9,<5.0.0",
    "jupyterlab-pygments>=0.2.2,<1.0.0",
    "jupyterlab_server>=2.27.3,<3.0.0",
    "keyring>=24.3.1,<25.0.0",
    "kiwisolver>=1.4.8,<2.0.0",
    "lazy-object-proxy>=1.10.0,<2.0.0",
    "lsprotocol>=2025.0.0,<2026.0.0",
    "markdown-it-py>=2.2.0,<3.0.0",
    "MarkupSafe>=2.1.3,<3.0.0",
    "matplotlib>=3.10.6,<4.0.0",
    "matplotlib-inline>=0.1.6,<1.0.0",
    "mccabe>=0.7.0,<1.0.0",
    "mdurl>=0.1.0,<1.0.0",
    "mistune>=2.0.4,<3.0.0",
    "more-itertools>=10.1.0,<11.0.0",
    "multidict>=6.7.0,<7.0.0",
    "mypy-extensions>=1.0.0,<2.0.0",
    "narwhals>=2.8.0,<3.0.0",
    "nbclient>=0.8.0,<1.0.0",
    "nbconvert>=7.10.0,<8.0.0",
    "nbformat>=5.9.2,<6.0.0",
    "nest-asyncio>=1.6.0,<2.0.0",
    "notebook>=7.4.7,<8.0.0",
    "notebook_shim>=0.2.4,<1.0.0",
    "numpy>=2.1.0,<3.0.0",
    "numpydoc>=1.7.0,<2.0.0",
    "packaging>=24.1,<25.0.0",
    "pandas>=2.2.2,<3.0.0",
    "pandocfilters>=1.5.0,<2.0.0",
    "parso>=0.8.3,<1.0.0",
    "pathspec>=0.10.3,<1.0.0",
    "pexpect>=4.8.0,<5.0.0",
    "pickleshare>=0.7.5,<1.0.0",
    "pillow>=11.1.0,<12.0.0",
    "pip>=24.2,<25.0.0",
    "platformdirs>=3.10.0,<4.0.0",
    "pluggy>=1.0.0,<2.0.0",
    "ply>=3.11,<4.0.0",
    "prometheus_client>=0.23.1,<1.0.0",
    "prompt-toolkit>=3.0.43,<4.0.0",
    "propcache>=0.4.1,<1.0.0",
    "protobuf>=6.32.1,<7.0.0",
    "psutil>=5.9.0,<6.0.0",
    "psycopg2-binary>=2.9.11,<3.0.0",
    "ptyprocess>=0.7.0,<1.0.0",
    "pure-eval>=0.2.2,<1.0.0",
    "pyarrow>=21.0.0,<22.0.0",
    "pycodestyle>=2.12.1,<3.0.0",
    "pycparser>=2.21,<3.0.0",
    "pydeck>=0.9.1,<1.0.0",
    "pydocstyle>=6.3.0,<7.0.0",
    "pyflakes>=3.2.0,<4.0.0",
    "PyGithub>=2.8.1,<3.0.0",
    "Pygments>=2.15.1,<3.0.0",
    "PyJWT>=2.10.1,<3.0.0",
    "pylint>=3.3.9,<4.0.0",
    "pylint-venv>=3.0.3,<4.0.0",
    "pyls-spyder>=0.4.0,<1.0.0",
    "PyNaCl>=1.6.0,<2.0.0",
    "pyparsing>=3.2.0,<4.0.0",
    "PyQt5>=5.15.10,<6.0.0",
    "PyQt5-sip>=12.13.0,<13.0.0",
    "PyQtWebEngine>=5.15.6,<6.0.0",
    "PySocks>=1.7.1,<2.0.0",
    "python-dateutil>=2.9.0.post0,<3.0.0",
    "python-dotenv>=1.1.1,<2.0.0",
    "python-json-logger>=4.0.0,<5.0.0",
    "python-lsp-black>=2.0.0,<3.0.0",
    "python-lsp-jsonrpc>=1.1.2,<2.0.0",
    "python-lsp-ruff>=2.3.0,<3.0.0",
    "python-lsp-server>=1.13.1,<2.0.0",
    "python-slugify>=5.0.2,<6.0.0",
    "pytoolconfig>=1.2.6,<2.0.0",
    "pytz>=2024.1,<2025.0.0",
    "pyuca>=1.2,<2.0.0",
    "pyxdg>=0.27,<1.0.0",
    "PyYAML>=6.0.1,<7.0.0",
    "pyzmq>=25.1.2,<26.0.0",
    "QDarkStyle>=3.2.3,<4.0.0",
    "qstylizer>=0.2.2,<1.0.0",
    "QtAwesome>=1.4.0,<2.0.0",
    "qtconsole>=5.7.0,<6.0.0",
    "QtPy>=2.4.1,<3.0.0",
    "referencing>=0.30.2,<1.0.0",
    "requests>=2.32.3,<3.0.0",
    "rfc3339-validator>=0.1.4,<1.0.0",
    "rfc3986-validator>=0.1.1,<1.0.1",
    "rich>=13.7.1,<14.0.0",
    "rope>=1.12.0,<2.0.0",
    "rpds-py>=0.10.6,<1.0.0",
    "Rtree>=1.0.1,<2.0.0",
    "ruff>=0.14.1,<1.0.0",
    "seaborn>=0.13.2,<1.0.0",
    "SecretStorage>=3.3.1,<4.0.0",
    "Send2Trash>=1.8.3,<2.0.0",
    "setuptools>=72.1.0,<73.0.0",
    "sip>=6.7.12,<7.0.0",
    "six>=1.16.0,<2.0.0",
    "smmap>=5.0.2,<6.0.2",
    "sniffio>=1.3.1,<2.0.0",
    "snowballstemmer>=2.2.0,<3.0.0",
    "sortedcontainers>=2.4.0,<3.0.0",
    "soupsieve>=2.5,<3.0.0",
    "Sphinx>=7.3.7,<8.0.0",
    "sphinxcontrib-applehelp>=1.0.2,<2.0.0",
    "sphinxcontrib-devhelp>=1.0.2,<2.0.0",
    "sphinxcontrib-htmlhelp>=2.0.0,<3.0.0",
    "sphinxcontrib-jsmath>=1.0.1,<2.0.0",
    "sphinxcontrib-qthelp>=1.0.3,<2.0.0",
    "sphinxcontrib-serializinghtml>=1.1.10,<2.0.0",
    "spyder>=6.1.0,<7.0.0",
    "spyder-kernels>=3.1.1,<4.0.0",
    "spyder-notebook>=0.7.1,<1.0.0",
    "SQLAlchemy>=2.0.44,<3.0.0",
    "stack-data>=0.2.0,<1.0.0",
    "streamlit>=1.50.0,<2.0.0",
    "superqt>=0.7.6,<1.0.0",
    "tabulate>=0.9.0,<1.0.0",
    "tenacity>=9.1.2,<10.0.0",
    "terminado>=0.18.1,<1.0.0",
    "text-unidecode>=1.3,<2.0.0",
    "textdistance>=4.2.1,<5.0.0",
    "three-merge>=0.1.1,<1.0.0",
    "tinycss2>=1.2.1,<2.0.0",
    "toml>=0.10.2,<1.0.0",
    "tomli>=2.0.1,<3.0.0",
    "tomlkit>=0.11.1,<1.0.0",
    "tornado>=6.4.1,<7.0.0",
    "traitlets>=5.14.3,<6.0.0",
    "typing_extensions>=4.15.0,<5.0.0",
    "tzdata>=2023.3,<2024.0.0",
    "ujson>=5.10.0,<6.0.0",
    "Unidecode>=1.3.8,<2.0.0",
    "uri-template>=1.3.0,<2.0.0",
    "urllib3>=2.2.2,<3.0.0",
    "watchdog>=4.0.1,<5.0.0",
    "wcwidth>=0.2.5,<1.0.0",
    "webcolors>=24.11.1,<25.0.0",
    "webencodings>=0.5.1,<1.0.0",
    "websocket-client>=1.9.0,<2.0.0",
    "whatthepatch>=1.0.2,<2.0.0",
    "wheel>=0.43.0,<1.0.0",
    "wrapt>=1.14.1,<2.0.0",
    "wurlitzer>=3.0.2,<4.0.0",
    "yapf>=0.40.2,<1.0.0",
    "yarl>=1.22.0,<2.0.0",
    "zipp>=3.17.0,<4.0.0"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
